# advent-of-code

./: .gitignore  README.md  day_04_input.txt  day_04_passport_processing.py  day_05_binary_boarding.py  day_06_custom_customs.py  main.py  pyproject.toml
2020/: day_01_input.txt  day_01_report_repair.py  day_02_password_philosophy.py  day_03_input.txt  day_03_toboggan_trajectory.py  day_04_input.txt  day_04_passport_processing.py  day_05_input.txt  day_06_custom_customs.py  day_06_input.txt  main.py
2021/: input01.txt  input02.txt  input03.txt  puzzle01.py  puzzle02.py  puzzle03.py  puzzle10.py  template.py  test.py
2021/puzzles/: puzzle03.py  puzzle04.py
2022/puzzles/: day_01.py  day_03.py  day_06.py  day_08.py  day_09.py  day_11.py  day_12.py
2023/: README.md
2023/inputs/: day_07.txt
2023/solutions/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_19.py  utils.py
2024/: day_01.py  day_02.py  day_05.py
aoc/: utils.py
aoc/solutions/2015/: day01.py  day02.py  day03.py
aoc/solutions/2020/: day04.py
aoc/solutions/2021/: day12.py
aoc/solutions/2025/: day01.py  day02.py  day04.py  day05.py  day06.py
archive/2020/: day_01_report_repair.py  day_03_toboggan_trajectory.py  day_04_clean.py  day_05_binary_boarding.py
archive/2021/puzzles/: day_01_sonar_sweep.py  day_05_hydrothermal_venture.py  day_09_smoke_basin.py  puzzle01.py  puzzle02.py  puzzle05.py  puzzle09.py
archive/2022/puzzles/: day_02.py  day_04.py  day_05.py  day_07.py  day_10.py
archive/2024/: day_03.py  day_04.py
tools/: auto_runner.py  runner.py
(+5 files in other folders)
